--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -46,6 +46,7 @@
             android:layout_width="175dp"
             android:layout_height="65dp"
             android:text="@string/settingsLabel"
+            android:onClick="showSettingsScreen"
             android:layout_marginBottom="5dp"/>
     </LinearLayout>
 
