created functional Music Toggle button in settings page and Main

--- a/app/src/main/res/layout/completed_layout.xml
+++ b/app/src/main/res/layout/completed_layout.xml
@@ -41,6 +41,12 @@
             android:onClick="showHelpScreen"
             android:text="@string/help" />
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="toggleMusic"
+            android:text="@string/musicToggle"/>
+
     </LinearLayout>
 
     <TextView
