added 2 new levels that will start when the player collects all the pellets

--- a/app/src/main/res/layout/completed_layout.xml
+++ b/app/src/main/res/layout/completed_layout.xml
@@ -24,7 +24,7 @@
             android:layout_width="175dp"
             android:layout_height="65dp"
             android:onClick="showPlayScreen"
-            android:text="@string/play"
+            android:text="@string/nextLevel"
             android:layout_above="@+id/linearLayout"
             android:layout_alignLeft="@+id/linearLayout"
             android:layout_alignStart="@+id/linearLayout" />
