added hard and expert difficulty to access level 2 and 3

--- a/app/src/main/res/layout/settings_layout.xml
+++ b/app/src/main/res/layout/settings_layout.xml
@@ -65,6 +65,29 @@
         android:layout_weight="0.09"
         android:onClick="changeToMediumDifficulty"/>
 
+    <Button
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/hardDifficulty"
+        android:textSize="20dp"
+        android:id="@+id/button3"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/black"
+        android:layout_weight="0.09"
+        android:onClick="changeToHardDifficulty"/>
+
+    <Button
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/expertDifficulty"
+        android:textSize="20dp"
+        android:id="@+id/button3"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/black"
+        android:layout_weight="0.09"
+        android:onClick="changeToExpertDifficulty"/>
 
 
 
