--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context="com.example.jimmyle.pacmanandroid.MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/black"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.example.jimmyle.pacmanandroid.gamefiles.activities.GameActivity"
+    android:touchscreenBlocksFocus="false">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/MainMenuImage"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:src="@drawable/pacman"
+        android:scaleType="fitXY"/>
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/wonGame"
+        android:id="@+id/textView3"
+        android:layout_marginTop="39dp"
+        android:textColor="@android:color/holo_orange_light"
+        android:textSize="@dimen/abc_action_bar_stacked_max_height"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:textStyle="bold|italic"
+        android:typeface="normal" />
 
-        <!--<android.support.v7.widget.Toolbar-->
-            <!--android:id="@+id/toolbar"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="?attr/actionBarSize"-->
-            <!--android:background="?attr/colorPrimary"-->
-            <!--app:popupTheme="@style/AppTheme.PopupOverlay" />-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/keepPlaying"
+        android:id="@+id/textView4"
+        android:layout_marginStart="20dp"
+        android:layout_above="@+id/linearLayout"
+        android:textColor="@android:color/holo_orange_light"
+        android:textStyle="bold"
+        android:typeface="normal"
+        android:layout_alignEnd="@+id/textView3" />
 
-    </android.support.design.widget.AppBarLayout>
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_alignBottom="@+id/MainMenuImage"
+        android:layout_marginBottom="100dp"
+        android:layout_marginStart="35dp">
 
-    <include layout="@layout/content_main" />
+        <Button
+            android:id="@+id/resumeButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:background="@drawable/rounded_corner_border"
+            android:textSize="18sp"
+            android:text="@string/resumeLabel"
+            android:layout_marginBottom="5dp"/>
+        <Button
+            android:id="@+id/newGameButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:background="@drawable/rounded_corner_border"
+            android:text="@string/play"
+            android:textSize="18sp"
+            android:layout_marginBottom="5dp"/>
 
-</android.support.design.widget.CoordinatorLayout>
+        <Button
+            android:id="@+id/helpButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:textSize="18sp"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/rounded_corner_border"
+            android:text="@string/help"/>
+
+        <Button
+            android:id="@+id/showSettingBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:textSize="18sp"
+            android:background="@drawable/rounded_corner_border"
+            android:text="@string/settingsLabel"
+            android:layout_marginBottom="5dp"/>
+    </LinearLayout>
+
+</RelativeLayout>
