--- a/app/src/main/res/layout/completed_layout.xml
+++ b/app/src/main/res/layout/completed_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".gamefiles.activities.GameActivity">
 
     <ImageView
         android:id="@+id/imageView"
@@ -12,34 +12,43 @@
         android:scaleType="fitXY" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_width="200dp"
         android:orientation="vertical"
-        android:layout_marginLeft="35dp"
+        android:layout_marginStart="35dp"
         android:id="@+id/linearLayout"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="100dp">
 
         <Button
-            android:layout_width="175dp"
-            android:layout_height="65dp"
-            android:onClick="showPlayScreen"
-            android:text="@string/nextLevel"
-            android:layout_above="@+id/linearLayout"
-            android:layout_alignLeft="@+id/linearLayout"
-            android:layout_alignStart="@+id/linearLayout" />
+            android:id="@+id/newGameButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:background="@drawable/rounded_corner_border"
+            android:text="@string/play"
+            android:textSize="18sp"
+            android:layout_marginBottom="5dp"/>
 
         <Button
-            android:layout_width="175dp"
-            android:layout_height="65dp"
+            android:id="@+id/helpButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:textSize="18sp"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/rounded_corner_border"
+            android:text="@string/help"/>
+
+        <Button
+            android:id="@+id/showSettingBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:textSize="18sp"
+            android:background="@drawable/rounded_corner_border"
             android:text="@string/settingsLabel"
-            android:layout_marginBottom="5dp" />
-
-        <Button
-            android:layout_width="175dp"
-            android:layout_height="65dp"
-            android:onClick="showHelpScreen"
-            android:text="@string/help" />
+            android:layout_marginBottom="5dp"/>
 
 
     </LinearLayout>
@@ -65,6 +74,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/keepPlaying"
         android:id="@+id/textView4"
+        android:layout_marginStart="20dp"
         android:layout_above="@+id/linearLayout"
         android:textColor="@android:color/holo_orange_light"
         android:textStyle="bold"
