--- a/app/src/main/res/layout/failed_layout.xml
+++ b/app/src/main/res/layout/failed_layout.xml
@@ -1,39 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/black"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.example.jimmyle.pacmanandroid.gamefiles.activities.GameActivity"
+    android:touchscreenBlocksFocus="false">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/MainMenuImage"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:src="@drawable/pacman"
-        android:scaleType="fitXY" />
+        android:scaleType="fitXY"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_alignBottom="@+id/imageView2"
+        android:layout_alignBottom="@+id/MainMenuImage"
         android:layout_marginBottom="100dp"
-        android:layout_marginLeft="35dp" >
+        android:layout_marginStart="35dp">
 
         <Button
-            android:layout_width="175dp"
-            android:layout_height="65dp"
-            android:onClick="showPlayScreen"
+            android:id="@+id/newGameButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:background="@drawable/rounded_corner_border"
             android:text="@string/play"
-            android:layout_marginBottom="5dp" />
+            android:textSize="18sp"
+            android:onClick="showPlayScreen"
+            android:layout_marginBottom="5dp"/>
 
         <Button
-            android:layout_width="175dp"
-            android:layout_height="65dp"
+            android:id="@+id/helpButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:textSize="18sp"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/rounded_corner_border"
             android:onClick="showHelpScreen"
-            android:text="@string/help" />
+            android:text="@string/help"/>
 
         <Button
-            android:layout_width="175dp"
-            android:layout_height="65dp"
+            android:id="@+id/showSettingBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:textSize="18sp"
+            android:background="@drawable/rounded_corner_border"
             android:text="@string/settingsLabel"
-            android:layout_marginBottom="5dp" />
+            android:onClick="showSetting"
+            android:layout_marginBottom="5dp"/>
     </LinearLayout>
+
 </RelativeLayout>
