--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="black">#000000</color>
-    <color name="white">#FFFFFF</color>
-    <color name="gray">#101010</color>
-    <color name="yellow">#FFD954</color>
+    <color name="colorPrimary">#6C32B8</color>
+    <color name="colorPrimaryDark">#3E51A5</color>
+    <color name="colorAccent">#D81B60</color>
+    <color name="white">#fff</color>
+    <color name="black">#000</color>
+    <color name="grey">#747474</color>
+    <color name="light_grey">#F2F2F2</color>
+    <color name="gradient_up">#6C32BB</color>
+    <color name="gradient_down">#C647D4</color>
+    <color name="red">#FF0000</color>
+    <color name="yellow">#FFEB3B</color>
 </resources>
